test different heap size
wip

Revert test fixtures

Large resource class and more memory

Use recommendation from Doug

reduce memory from 5g to 3.5g

RunWriteJob

do not add debug agent

wip

tune retries configuration

Bump Sidecar version

Bump memory

wip

wip

increase parallelism, reduce xmx

wip

wip

Dougs Changes

Dougs Changes

Should fix things

Checkstyle

Fix jdk8 missing ps.info

Back to single fork, slightly more memory

CircleCI parallel test runs attempt 1

CircleCI parallel test runs attempt 12

Split normal an integration tests

Move attach to after checkout

Reduce max memory test has to share with Spark

Wait for healthy ring on all instances before running replacement tests

Add ability to modify RF while range movements are ongoing

Limit Spark memory to 1G

Remove security manager

More memory reduction?

Add --no-daemon to gradle in integration

Add spark failure exception for later use in verification

Limit max direct memory size

Really run one test at a time

Fix gradle params

Use milliseconds for sidecar retries configuration options

Make build complete all tests before failing and fix Rat

fix millis refactor

Checkstyle

Use schemaChange to create keyspaces and tables for testing

do not rethrow on failure to close the cluster

Ignore shut down instances when making schema changes

Fix distributed schemas if cluster auto-starts and instance count > 1

Validate jobs failure exception reason from stderr

Minor cleanup

Use memory available in container during tests

Checkstyle fix

Do not set heap size explicitly

Revert "Do not set heap size explicitly"

This reverts commit 6c7220fbccf0dd8245cd6c7a20202b8a53865658.

Revert "Use memory available in container during tests"

This reverts commit d0d5199ecc31d27489c49bd1909de74d432dbc6f.

Fix tests